--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "NezhOS",
+    "name": "HugiOS",
     "version": "1.0.0",
     "minAppVersion": "0.16.0",
     "author": "@nezhivar",
