--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "obsidian-nezhos-theme",
+  "name": "obsidian-HugiOS-theme",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
